# Hand_Simulation

./: cxxtest  cxxtest.cxx  hand_simulation.cxx  test  test.c
ex_readstl/: CMakeLists.txt  readstl.cxx
ex_readstl/buiild/: CMakeCache.txt  Makefile  cmake_install.cmake
ex_readstl/buiild/ReadSTL.app/Contents/MacOS/: ReadSTL
ex_readstl/stl/: simulation_hand_robot_231118.py
ex_readstl/stl/1/: f_1.stl  f_2.stl  f_3.stl
ex_readstl/stl/2/: f_1.stl  f_2.stl  f_3.stl  f_4.stl
ex_readstl/stl/3/: f_1.stl  f_2.stl  f_3.stl  f_4.stl
ex_readstl/stl/4/: f_1.stl  f_2.stl  f_3.stl  f_4.stl
ex_readstl/stl/5/: f_1.stl  f_2.stl  f_3.stl  f_4.stl
ex_readstl/stl/6/: p_1.stl
